@@ -1,5 +1,4 @@
 *** nearest release ***
-  ! new options group box: "File List" for TreeWidget settings
   ! SVG convertion patch
 
 *** next release ***
