@@ -22,13 +22,18 @@
 #include <QDialogButtonBox>
 #include <QListWidget>
 #include <QScrollArea>
+#include <QMessageBox>
 #include "optionsdialog.h"
 #include "convertdialog.h"
 #include "widgets/options/generalgroupbox.h"
+#include "widgets/options/filelistgroupbox.h"
+#ifdef SIR_METADATA_SUPPORT
 #include "widgets/options/detailsgroupbox.h"
 #include "widgets/options/metadatagroupbox.h"
+#endif // SIR_METADATA_SUPPORT
 #include "widgets/options/selectiongroupbox.h"
 #include "widgets/options/rawgroupbox.h"
+#include "optionsenums.h"
 
 /** Default constructor.\n
   * Sets up window, loads settings and creates connections.
@@ -54,7 +59,7 @@ void OptionsDialog::createConnections() {
     connect(rawGroupBox, SIGNAL(ok()), (ConvertDialog*)parent(), SLOT(loadSettings()));
     // ok button
     connect(buttonBox->button(QDialogButtonBox::Ok), SIGNAL(clicked()),
-            this, SLOT(saveSettings()));
+            this, SLOT(okButtonClicked()));
 }
 
 /** Hides last choosed category (group box) and shows just selected category.
@@ -78,7 +83,7 @@ void OptionsDialog::loadSettings() {
 }
 
 /** Writes settings based values of the user input wigets.
-  * \sa loadSettings()
+  * \sa loadSettings() okButtonClicked()
   */
 void OptionsDialog::saveSettings() {
     // save settings for eatch group box
@@ -86,6 +91,22 @@ void OptionsDialog::saveSettings() {
         groupBoxes[i]->saveSettings();
     // Write file settings
     Settings::instance().writeSettings();
+}
+
+/** \e Ok button clicked slot.\n
+  * Checks values in user input widgets and saves settings if checking was
+  * successful.
+  * \sa saveSettings()
+  */
+void OptionsDialog::okButtonClicked() {
+    if (!fileListGroupBox->isColumnChecked()) {
+        QMessageBox::warning(this, tr("Select a column"),
+                             tr("Select at least 1 column to show in file list."));
+        if (!fileListGroupBox->isVisible())
+            listWidget->setCurrentRow(Options::FileList);
+        return;
+    }
+    saveSettings();
 }
 
 /** Setups user interface of options dialog. */
@@ -100,29 +121,42 @@ void OptionsDialog::setupUi() {
     horizontalLayout = new QHBoxLayout();
     horizontalLayout->setObjectName("horizontalLayout");
     horizontalLayout->setSpacing(8);
+
+    // list widget setup
     listWidget = new QListWidget(this);
+    // General
     QIcon icon = QIcon::fromTheme("preferences-system",
                                   QIcon(":/images/options_general.png"));
     QListWidgetItem *listWidgetItem = new QListWidgetItem(listWidget);
     listWidgetItem->setIcon(icon);
     listWidgetItem->setText(tr("General"));
+    // File list
+    icon = QIcon::fromTheme("preferences-desktop",
+                            QIcon(":/images/options_list.png"));
+    listWidgetItem = new QListWidgetItem(listWidget);
+    listWidgetItem->setIcon(icon);
+    listWidgetItem->setText(tr("File list"));
 #ifdef SIR_METADATA_SUPPORT
+    // Metadata
     icon = QIcon::fromTheme("document-properties",
                             QIcon(":/images/options_metadata.png"));
     listWidgetItem = new QListWidgetItem(listWidget);
     listWidgetItem->setIcon(icon);
     listWidgetItem->setText(tr("Metadata"));
+    // File details
     icon = QIcon::fromTheme("x-office-document",
                             QIcon(":/images/options_details.png"));
     listWidgetItem = new QListWidgetItem(listWidget);
     listWidgetItem->setIcon(icon);
     listWidgetItem->setText(tr("File details"));
 #endif // SIR_METADATA_SUPPORT
+    // Selection
     icon = QIcon::fromTheme("edit-find",
                             QIcon(":/images/options_selection.png"));
     listWidgetItem = new QListWidgetItem(listWidget);
     listWidgetItem->setIcon(icon);
     listWidgetItem->setText(tr("Selection"));
+    // Raw
     icon = QIcon::fromTheme("emblem-photos",
                             QIcon(":/images/options_raw.png"));
     listWidgetItem = new QListWidgetItem(listWidget);
@@ -146,32 +180,36 @@ void OptionsDialog::setupUi() {
     verticalLayout_2 = new QVBoxLayout(scrollAreaWidgetContents);
     verticalLayout_2->setObjectName(QString::fromUtf8("verticalLayout_2"));
 
-    // create group boxes and add to layout
+    // create group boxes
     generalGroupBox = new GeneralGroupBox(scrollAreaWidgetContents);
-    verticalLayout_2->addWidget(generalGroupBox);
+    fileListGroupBox = new FileListGroupBox(scrollAreaWidgetContents);
 #ifdef SIR_METADATA_SUPPORT
     metadataGroupBox = new MetadataGroupBox(scrollAreaWidgetContents);
-    verticalLayout_2->addWidget(metadataGroupBox);
     detailsGroupBox = new DetailsGroupBox(scrollAreaWidgetContents);
-    verticalLayout_2->addWidget(detailsGroupBox);
 #endif // SIR_METADATA_SUPPORT
     selectionGroupBox = new SelectionGroupBox(scrollAreaWidgetContents);
-    verticalLayout_2->addWidget(selectionGroupBox);
     rawGroupBox = new RawGroupBox(scrollAreaWidgetContents);
-    verticalLayout_2->addWidget(rawGroupBox);
     verticalSpacer = new QSpacerItem(20, 40, QSizePolicy::Minimum, QSizePolicy::Expanding);
-    verticalLayout_2->addItem(verticalSpacer);
-    scrollAreaWidgetContents->setLayout(verticalLayout_2);
 
+    // setup group boxes pointer array
     groupBoxes = new AbstractOptionsGroupBox*[categoriesCount];
     quint8 i = 0;
     groupBoxes[i++] = generalGroupBox;
+    groupBoxes[i++] = fileListGroupBox;
 #ifdef SIR_METADATA_SUPPORT
     groupBoxes[i++] = metadataGroupBox;
     groupBoxes[i++] = detailsGroupBox;
 #endif // SIR_METADATA_SUPPORT
     groupBoxes[i++] = selectionGroupBox;
     groupBoxes[i] = rawGroupBox;
+
+    // adding group boxes to layout
+    for (i=0; i<categoriesCount; i++)
+        verticalLayout_2->addWidget(groupBoxes[i]);
+    verticalLayout_2->addItem(verticalSpacer);
+    scrollAreaWidgetContents->setLayout(verticalLayout_2);
+
+    // hiding group boxes
     for (i=0; i<categoriesCount; i++)
         groupBoxes[i]->hide();
 
